--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,4 @@
 {  
    "timeToClose":"20",
-   "gsWhitelist":["http://10.234.0.82", "http://10.234.200.210", "mail.google.com"]
+   "whitelist":["http://10.234.0.82", "http://10.234.200.210", "mail.google.com"]
 }
